--- a/src/main/resources/templates/fragment/sidebar.html
+++ b/src/main/resources/templates/fragment/sidebar.html
@@ -1,44 +1,6 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <div th:fragment="sidebar">
-        <div class="sidebar">
-            <ul>
-                <!-- Sidebar for Admin -->
-                <li th:if="${role == 'admin'}">
-                    <a href="#" th:href="@{/admin/thong-ke/trang-thong-ke}"><i class="fas fa-chart-pie"></i> Thống kê</a>
-                </li>
-                <li th:if="${role == 'admin'}">
-                    <a href="#" th:href="@{/admin/ban-hang/ban-hang-quay}"><i class="fas fa-check-circle"></i> Bán hàng tại quầy</a>
-                </li>
-                <li th:if="${role == 'admin'}">
-                    <a href="#" th:href="@{/admin/hoa-don/danh-sach-hoa-don}"><i class="fas fa-calendar-check"></i> Quản lý hóa đơn</a>
-                </li>
-                <li th:if="${role == 'admin'}">
-                    <a href="#" th:href="@{/admin/san-pham/danh-sach-san-pham}"><i class="fas fa-archive"></i> Sản phẩm</a>
-                </li>
-                <li th:if="${role == 'admin'}">
-                    <a href="#" th:href="@{/admin/tai-khoan-khach-hang/danh-sach-tai-khoan-khach-hang}"><i class="fas fa-history"></i>Quản lý tài khoản</a>
-                </li>
-
-    <!--             Sidebar for NhanVien-->
-                <li th:if="${role == 'nhan-vien'}">
-                    <a href="#" th:href="@{/nhan-vien/ban-hang/trang-ban-hang}"><i class="fas fa-pencil-alt"></i> Bán hàng tại quầy</a>
-                </li>
-                <li th:if="${role == 'nhan-vien'}">
-                    <a href="#" th:href="@{/nhan-vien/hoa-don/danh-sach-hoa-don}"><i class="fas fa-pencil-alt"></i> Quản lý hóa đơn</a>
-                </li>
-                <li th:if="${role == 'nhan-vien'}">
-                    <a href="#" th:href="@{/nhan-vien/tai-khoan/thong-tin-tai-khoan}"><i class="fas fa-pencil-alt"></i> Hồ sơ</a>
-                </li>
-
-    <!--            &lt;!&ndash; Sidebar for PR Head &ndash;&gt;-->
-    <!--            <li th:if="${role == 'khach-hang'}">-->
-    <!--                <a href="#" th:href="@{/truong-phong-pr/quan-ly-chu-de}"><i class="fas fa-tasks"></i> Quản lý chủ đề</a>-->
-    <!--            </li>-->
-
-
-            </ul>
-        </div>
 
 
     <div class="sidebar">
@@ -75,9 +37,10 @@
                 <ul class="submenu">
                     <li th:if="${role == 'admin'}"><a href="#" th:href="@{/admin/san-pham/danh-sach-san-pham}">Sản Phẩm</a></li>
                     <li th:if="${role == 'admin'}"><a href="#" th:href="@{/admin/danh-muc/danh-sach-danh-muc}">Danh mục</a></li>
-<!--                    <li th:if="${role == 'admin'}"><a href="#" th:href="@{/admin/thong-ke/trang-thong-ke}">Đế Giày</a></li>-->
                     <li th:if="${role == 'admin'}"><a href="#" th:href="@{/admin/hang/danh-sach-hang}">Thương Hiệu</a></li>
                     <li th:if="${role == 'admin'}"><a href="#" th:href="@{/admin/chat-lieu/danh-sach-chat-lieu}">Chất Liệu</a></li>
+                    <li th:if="${role == 'admin'}"><a href="#" th:href="@{/admin/kich-thuoc/danh-sach-kich-thuoc}">Kích thước</a></li>
+                    <li th:if="${role == 'admin'}"><a href="#" th:href="@{/admin/mau-sac/danh-sach-mau-sac}">Màu sắc</a></li>
                 </ul>
             </li>
             <li class="dropdown" th:if="${role == 'admin'}">
@@ -130,7 +93,7 @@
         }
 
         .logo {
-            margin-left: 40 px;
+            margin-left: 40px;
             text-align: center;
             width: 150px;
             height: 150px;
@@ -206,48 +169,6 @@
             transition: width 0.3s;
         }
 
-        /*.sidebar ul {*/
-        /*    list-style-type: none;*/
-        /*    padding: 0;*/
-        /*}*/
-        /*.sidebar ul li {*/
-        /*    padding: 10px;*/
-        /*}*/
-        /*.sidebar ul li a {*/
-        /*    text-decoration: none;*/
-        /*    color: white;*/
-        /*    display: flex;*/
-        /*    align-items: center;*/
-        /*}*/
-        /*.sidebar ul li a:hover {*/
-        /*    background-color: #007bff;*/
-        /*}*/
-        /*.sidebar ul li a i {*/
-        /*    margin-right: 10px;*/
-        /*}*/
-        /*.sidebar ul li a.active {*/
-        /*    font-weight: bold;*/
-        /*    background-color: #0056b3;*/
-        /*}*/
-        /*    -------------*/
-        /*.sidebar {*/
-        /*    height: 100vh;*/
-        /*    width: 250px;*/
-        /*    position: fixed;*/
-        /*    top: 0;*/
-        /*    left: 0;*/
-        /*    background-color: #343a40;*/
-        /*    padding-top: 20px;*/
-        /*}*/
-        /*.sidebar a {*/
-        /*    color: white;*/
-        /*    padding: 10px;*/
-        /*    text-decoration: none;*/
-        /*    display: block;*/
-        /*}*/
-        /*.sidebar a:hover {*/
-        /*    background-color: #575d63;*/
-        /*}*/
 
 
     </style>
