--- a/src/main/resources/templates/admin/ban-hang/ban-hang-quay.html
+++ b/src/main/resources/templates/admin/ban-hang/ban-hang-quay.html
@@ -13,8 +13,8 @@
     </style>
 </head>
 <body >
-<div th:replace="sidebar :: sidebar"></div>
-<div th:replace="navbar :: navbar"></div>
+<div th:replace="fragment/sidebar :: sidebar"></div>
+<div th:replace="fragment/navbar :: navbar"></div>
 
 <div class="content" style="margin-left: 220px; padding: 20px; ">
     <h1>Trang Bán Hàng</h1>
