--- a/src/main/resources/templates/fragment/navbar-for-kh.html
+++ b/src/main/resources/templates/fragment/navbar-for-kh.html
@@ -1,10 +1,134 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<div th:fragment="navbarforCus">
 
-</body>
+    <style>
+        /* CSS cho toàn bộ menu */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #333;
+            padding: 10px 20px;
+        }
+
+        .navbar .logo {
+            display: flex;
+            align-items: center;
+            margin-left: 40px;
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            overflow: hidden;
+        }
+
+        .navbar .logo img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .navbar ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+
+        .navbar li {
+            margin: 0 15px;
+        }
+
+        .navbar a {
+            color: white;
+            text-decoration: none;
+            font-size: 20px;
+        }
+
+        .navbar .icons {
+            display: flex;
+            align-items: center;
+        }
+
+        .navbar .icons li {
+            margin-left: 15px;
+        }
+
+        .navbar .icons img {
+            width: 24px;
+            height: 24px;
+        }
+
+        .navbar .icons .cart {
+            position: relative;
+        }
+
+        .navbar .icons .cart .badge {
+            position: absolute;
+            top: -5px;
+            right: -10px;
+            background-color: red;
+            color: white;
+            border-radius: 50%;
+            padding: 2px 5px;
+            font-size: 12px;
+        }
+    </style>
+
+
+
+    <nav class="navbar">
+        <!-- Phần logo -->
+        <div class="logo" th:if="${role == 'khach-hang'}">
+            <a href="#">
+                <img src="https://previews.123rf.com/images/pixbold/pixbold2110/pixbold211000833/175825768-charity-logo-template-on-letter-hb-initial-unity-foundation-human-logo-sign-unity-team-work-logo.jpg" alt="HB Logo">
+            </a>
+
+        </div>
+
+        <!-- Phần menu chính -->
+        <ul class="menu">
+            <li th:if="${role == 'khach-hang'}">
+                <a href="#">TRANG CHỦ</a>
+            </li>
+            <li th:if="${role == 'khach-hang'}">
+                <a href="#" th:href="@{/khach-hang/trang-mua-hang/danh-sach-san-pham}">SẢN PHẨM</a>
+            </li>
+            <li th:if="${role == 'khach-hang'}">
+                <a href="#">VỀ CHÚNG TÔI</a>
+            </li>
+        </ul>
+
+        <!-- Phần biểu tượng và giỏ hàng -->
+        <ul class="icons">
+            <li th:if="${role == 'khach-hang'}">
+                <a href="#">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </a>
+            </li>
+            <li th:if="${role == 'khach-hang'}">
+                <a href="#">
+                    <i class="fa-solid fa-truck-fast"></i>
+                </a>
+            </li>
+            <li th:if="${role == 'khach-hang'}">
+                <a href="#" th:href="@{/khach-hang/gio-hang/danh-sach-san-pham-trong-gio-hang}">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </a>
+            </li>
+            <li th:if="${role == 'khach-hang'}">
+                <a href="#" th:href="@{/khach-hang/tai-khoan/thong-tin-tai-khoan}">
+                    <i class="fa-solid fa-user"></i>
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+
+</div>
 </html>
