--- a/src/main/resources/templates/nhan-vien/tai-khoan/thong-tin-tai-khoan.html
+++ b/src/main/resources/templates/nhan-vien/tai-khoan/thong-tin-tai-khoan.html
@@ -14,8 +14,8 @@
 <body>
 
 
-<div th:replace="sidebar :: sidebar" ></div>
-<div th:replace="navbar :: navbar"></div>
+<div th:replace="fragment/sidebar :: sidebar" ></div>
+<div th:replace="fragment/navbar :: navbar"></div>
 
 <div class="content" style="margin-left: 220px; padding: 20px;">
     <h1>Hồ sơ</h1>
