commit lan 4: view chat lieu, hang, mau sac, kich thuoc, danh muc - Hồng

--- a/src/main/resources/templates/fragment/navbar.html
+++ b/src/main/resources/templates/fragment/navbar.html
@@ -7,12 +7,23 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
+
                 <li class="nav-item">
                     <a class="nav-link" href="/author-switch">Author Switch</a>
                 </li>
+
             </ul>
         </div>
+        <ul class="navbar-nav" style="text-align: right;">
+            <li class="nav-item" >
+                <span class="name">Nguyễn Tiểu Ngư</span>
+                <a href="#"><img src="https://imgcdn.stablediffusionweb.com/2024/9/24/3d53c6ef-5598-468c-9de6-c4480a5a4dc0.jpg" alt="Profile Picture" class="profile-pic"></a>
+            </li>
+
+        </ul>
     </nav>
+
+
 
     <style>
         .navbar {
@@ -30,5 +41,23 @@
             font-weight: bold;
             color: #5d5a5a;
         }
+
+
+        .profile-pic {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            margin-right: 10px;
+            object-fit: cover;
+
+        }
+
+        .name {
+            font-family: Arial, sans-serif;
+            font-size: 16px;
+            font-weight: bold;
+            margin-right: 10px;
+        }
+
     </style>
 </div>
