--- a/src/main/resources/templates/khach-hang/tai-khoan/thong-tin-tai-khoan.html
+++ b/src/main/resources/templates/khach-hang/tai-khoan/thong-tin-tai-khoan.html
@@ -16,6 +16,19 @@
 
 <div class="content" style="margin-left: 220px; padding: 20px;">
     <h1>Trang tai khaon</h1>
+    <nav class="navbar navbar-expand-lg">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/author-switch">Author Switch</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </div>
 
 
