--- a/src/main/resources/templates/admin/san-pham/san-pham-chi-tiet.html
+++ b/src/main/resources/templates/admin/san-pham/san-pham-chi-tiet.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sản phẩm</title>
+    <title>Sản phẩm chi tiết</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -30,7 +30,7 @@
 
 <div class="content" style="margin-left: 220px; padding: 20px;">
     <div class="container mt-3">
-        <h3><i class="fa-solid fa-bars-progress"></i> Quản lý sản phẩm</h3>
+        <h3><i class="fa-solid fa-bars-progress"></i> Quản lý sản phẩm chi tiết</h3>
 
         <!-- Filter Section -->
         <div class="card mb-4">
@@ -55,9 +55,8 @@
                             <option value="inactive">Ngừng hoạt động</option>
                         </select>
                     </div>
+                    <div class="col-md-2"></div>
                     <div class="col-md-2">
-                    </div>
-                    <div class="col-md-3">
                         <label class="form-label">Hãng:</label>
                         <select  class="form-select">
                             <option value="all">Tất cả</option>
@@ -65,8 +64,32 @@
                             <option value="inactive">Ngừng hoạt động</option>
                         </select>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-2">
                         <label class="form-label">Danh mục:</label>
+                        <select  class="form-select">
+                            <option value="all">Tất cả</option>
+                            <option value="active">Đang hoạt động</option>
+                            <option value="inactive">Ngừng hoạt động</option>
+                        </select>
+                    </div>
+                    <div class="col-md-2">
+                        <label class="form-label">Chất liệu:</label>
+                        <select  class="form-select">
+                            <option value="all">Tất cả</option>
+                            <option value="active">Đang hoạt động</option>
+                            <option value="inactive">Ngừng hoạt động</option>
+                        </select>
+                    </div>
+                    <div class="col-md-2">
+                        <label class="form-label">Kích thước:</label>
+                        <select  class="form-select">
+                            <option value="all">Tất cả</option>
+                            <option value="active">Đang hoạt động</option>
+                            <option value="inactive">Ngừng hoạt động</option>
+                        </select>
+                    </div>
+                    <div class="col-md-2">
+                        <label class="form-label">Màu sắc:</label>
                         <select  class="form-select">
                             <option value="all">Tất cả</option>
                             <option value="active">Đang hoạt động</option>
@@ -83,17 +106,20 @@
         <!-- Category List Table -->
         <div class="card">
             <div class="card-header">
-                <i class="fas fa-list"></i> Danh sách sản phẩm
-                <a type="button" class="btn btn-light float-end" th:href="@{/admin/san-pham/them-san-pham}">+ Tạo sản phẩm</a>
+                <i class="fas fa-list"></i> Danh sách sản phẩm chi tiết
+<!--                <a type="button" class="btn btn-light float-end" th:href="@{/admin/san-pham/them-san-pham}">+ Tạo mới sản phẩm</a>-->
             </div>
             <div class="card-body">
                 <table class="table table-striped">
                     <thead>
                     <tr>
                         <th>STT</th>
-                        <th>Mã sản phẩm</th>
+                        <th>Ảnh</th>
                         <th>Tên sản phẩm</th>
-                        <th>Số lượng tồn</th>
+                        <th>Số lượng</th>
+                        <th>Giá bán</th>
+                        <th>Kích thước</th>
+                        <th>Màu sắc</th>
                         <th>Trạng Thái</th>
                         <th>Hành động</th>
                     </tr>
@@ -105,11 +131,9 @@
                         <td>20-12-2023</td>
                         <td><span class="badge bg-success">Đang sử dụng</span></td>
                         <td>
-                            <a class="btn badge-success" th:href="@{/admin/san-pham/sua-san-pham}"><i
+                            <a class="btn badge-success" th:href="@{/admin/san-pham/sua-san-pham-chi-tiet}"><i
                                     class="fas fa-edit"></i></a>
-                            <a class="btn badge-success" th:href="@{/admin/san-pham/san-pham-chi-tiet}"><i class="fas fa-eye"></i></a>
-                            <a class="btn badge-success" th:href="@{/admin/san-pham/them-san-pham-chi-tiet}"><i class="fa-solid fa-plus"></i></a>
-
+                            <a class="btn badge-success" th:href="@{/admin/san-pham/xem-san-pham-chi-tiet}"><i class="fas fa-eye"></i></a>
                         </td>
                     </tr>
                     <tr>
